2019-08-12  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mailbox-imap: Store cache-manager in the object instead of
	using GObject-data.

	* libbalsa/mailbox_imap.c (libbalsa_mailbox_imap_finalize),
	(libbalsa_mailbox_imap_open), (libbalsa_mailbox_imap_close):

2019-08-12  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mailbox: Store message-partial ids in the object instead of
	using GObject-data.

	* libbalsa/mailbox.c (lbm_try_reassemble_idle),
	(libbalsa_mailbox_try_reassemble):

2019-08-12  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Drop redundant dynamic cast

	* src/mailbox-node.c (balsa_mailbox_node_finalize):

2019-08-12  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Unref structure members in a dispose method

	* libbalsa/libbalsa-vfs.c (libbalsa_vfs_class_init),
	(libbalsa_vfs_dispose), (libbalsa_vfs_finalize):

2019-08-12  Peter Bloomfield  <pbloomfield@bellsouth.net>

	In calls to g_signal_connect_swapped(), do not cast data using
	G_OBJECT(data).

	The argument is a gpointer, so the cast is redundant.

	* src/filter-run-dialog.c (balsa_filter_run_dialog_init):

2019-08-11  Peter Bloomfield  <pbloomfield@bellsouth.net>

	In calls to g_signal*(), do not cast object using
	G_OBJECT(object).

	The argument is a gpointer, so the cast is redundant.

	* libbalsa/address.c (libbalsa_address_get_edit_widget):
	* libbalsa/filter-funcs.c (libbalsa_filter_list_new):
	* libbalsa/folder-scanners.c (libbalsa_scanner_imap_dir),
	(imap_tree_scan):
	* libbalsa/identity.c (setup_ident_frame):
	* libbalsa/imap/imap-commands.c (imap_mbox_select_unlocked):
	* libbalsa/imap/imap-handle.c (imap_mbox_connect),
	(imap_mbox_handle_get_delim), (ir_list_lsub), (ir_exists),
	(ir_expunge):
	* libbalsa/libbalsa-gpgme-cb.c (lb_gpgme_select_key):
	* libbalsa/libbalsa-progress.c
	(libbalsa_progress_dialog_ensure_real), (create_progress_widget):
	* libbalsa/libbalsa-vfs.c (libbalsa_vfs_mime_button):
	* libbalsa/macosx-helpers.c (libbalsa_macosx_menu),